--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="js/sheets-api.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
