--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
         </div>
     </div>
 
+    <script src="https://accounts.google.com/gsi/client"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="js/sheets-api.js"></script>
