--- a/index.html
+++ b/index.html
@@ -106,7 +106,11 @@
                             </div>
                             <button type="submit" class="btn btn-primary w-100">
                                 <i class="bi bi-plus-circle me-2"></i>
-                                Enregistrer
+                                Ajouter
+                            </button>
+                            <button type="button" id="refreshDataBtn" class="btn btn-secondary w-100 mt-2">
+                                <i class="bi bi-arrow-clockwise me-2"></i>
+                                Actualiser
                             </button>
                         </form>
                     </div>
