Ajout de la barre de progression annuelle basée sur la date de début du leasing

--- a/index.html
+++ b/index.html
@@ -79,6 +79,16 @@
                 <div class="progress mb-3">
                     <div id="progressBar" class="progress-bar" role="progressbar"></div>
                 </div>
+
+                <h5 class="card-title d-flex justify-content-between align-items-center mt-4">
+                    Progression de l'année
+                    <span class="badge bg-success" id="progressionAnnee">
+                        <span id="jourActuel">0</span> / 365 jours
+                    </span>
+                </h5>
+                <div class="progress mb-3">
+                    <div id="progressBarAnnee" class="progress-bar bg-success" role="progressbar"></div>
+                </div>
             </div>
         </div>
 
