--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     </span>
                 </h5>
                 <div class="progress mb-3">
-                    <div id="progressBarAnnee" class="progress-bar bg-success" role="progressbar"></div>
+                    <div id="progressBarAnnee" class="progress-bar bg-success" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
             </div>
         </div>
